test/parser/should_fail/while3.souc.bad
main() = do
	while true
		explode
	end if
